helm/test-kong-app/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    capsule.clastix.io/tenant: mnc
    name: mnc-test-kong
    project: mc
  name: mnc-test-kong
spec:
  finalizers:
  - kubernetes
