helm/test-kong-app/demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: podinfo
  name: podinfo
  namespace: mnc-test-kong
spec:
  containers:
  - image: stefanprodan/podinfo
    imagePullPolicy: Always
    name: podinfo
    ports:
    - containerPort: 9898
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-mwrng
      readOnly: true
  dnsConfig:
    options:
    - name: single-request-reopen
      value: ""
    - name: timeout
      value: "2"
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-mwrng
    secret:
      defaultMode: 420
      secretName: default-token-mwrng
